# model-fitting-solvers

./: CMakeLists.txt  README.md  build.sh  run.sh
test/: CMakeLists.txt  test_ceres.cpp  test_g2o.cpp
